--- a/src/app/Pages/faqs/faqs.component.html
+++ b/src/app/Pages/faqs/faqs.component.html
@@ -11,7 +11,9 @@
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Para ello, tienes que descargar la aplicación (puedes hacerlo <b><a href="https://play.google.com/store/games" target="_blank">aquí</a></b>) y registrarte. Una vez logueada, encontrarás una lista de mascotas disponibles con sus fotos y descripciones. Además, podrás aplicar varios filtros que te ayudarán a encontrar una mascota según tus preferencias.
+                        Para ver las fichas de los animales disponibles, simplemente debes <b><a href="https://play.google.com/store/games" target="_blank">
+                        descargar la aplicación</a></b>, registrarte y navegar a la categoría correspondiente a través de la interfaz de usuario. 
+                        Allí podrás ver todas las mascotas en adopción, junto con sus fotos, descripciones y cualquier otra información relevante.
                     </div>
                 </div>
             </div>
@@ -23,103 +25,125 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Por evitar confusiones o peticiones múltiples, en cuanto se inicie el trámite para una adopción, el animal deja de aparecer en la aplicación. También puede ser útil contactar con la organización detrás de la aplicación para obtener información actualizada. En caso de que la adopción no se finalice, la mascota volerá a mostrarse en la app.
+                        Por evitar confusiones o peticiones múltiples, en cuanto se inicia el trámite para una adopción, el animal deja de aparecer en la 
+                        aplicación. Si esta no llega a llevarse a cabo, la mascota vuelve a mostrarse en la app. Si tienes alguna petición concreta, no
+                        dudes en <b><a href="../landingPage/contactUs">contactar con nosotros</a></b>.
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="headingThree">
                     <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="false" aria-controls="collapse3">
-                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                        #3 &nbsp; ¿Cuánto duran los trámites de adopción?
                     </button>
                 </h2>
                 <div id="collapse3" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                        El proceso de adopción puede variar en duración dependiendo de algunos factores como la disponibilidad de los encargados de realizar 
+                        las entrevistas y la revisión de la información proporcionada en la ficha de adopción. En general, el tiempo de espera puede oscilar entre una 
+                        y tres semanas. Una vez que se ha aprobado la solicitud de adopción, se establecerá una fecha para firmar el contrato de adopción y 
+                        recoger a la mascota.
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading4">
                     <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="false" aria-controls="collapseTwo">
-                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                        #4 &nbsp; ¿Cómo puedo contactar con el dueño del perro o gato que quiero adoptar?
                     </button>
                 </h2>
                 <div id="collapse4" class="accordion-collapse collapse" aria-labelledby="heading4" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                        Salvo casos concretos, entrarás en contacto con el actual dueño en una de las entrevistas personales previas a la adopción. Esta se dará tras
+                        completar el formulario de adopción presente en cada una de las fichas de los animales. 
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading5">
                     <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="false" aria-controls="collapseTwo">
-                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                        #5 &nbsp; Si me gusta un animal, ¿puedo conocerlo antes de confirmar la adopción?
                     </button>
                 </h2>
                 <div id="collapse5" class="accordion-collapse collapse" aria-labelledby="heading5" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                        Sí, en la mayoría de los casos se permite visitar a un perro o gato antes de adoptarlo. Esta visita suele darse en la misma entrevista con el actual propietario. Esto puede ayudar a los adoptantes a conocer mejor a la mascota y asegurarse de que es una buena opción para su hogar.
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading6">
                     <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="false" aria-controls="collapseTwo">
-                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                        #6 &nbsp; ¿Cómo puedo saber si un perro o gato tiene una enfermedad o necesidad especial?
                     </button>
                 </h2>
                 <div id="collapse6" class="accordion-collapse collapse" aria-labelledby="heading6" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                        En la ficha de cada mascota, incluimos información detallada sobre su estado de salud y cualquier necesidad especial que pueda 
+                        tener. Si tienes preguntas adicionales, no dudes en <b><a href="../landingPage/contactUs">ponerte en contacto con nosotros</a></b> 
+                        para obtener más información.
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading7">
                     <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="false" aria-controls="collapseTwo">
-                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                        #7 &nbsp; ¿Qué incluye el proceso de adopción? ¿Debo pagar algún tipo de tasa o cuota?
                     </button>
                 </h2>
                 <div id="collapse7" class="accordion-collapse collapse" aria-labelledby="heading7" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                        El proceso de adopción incluye una evaluación inicial para determinar si eres un buen candidato para adoptar una mascota, 
+                        una entrevista personal y un proceso de seguimiento posterior. También puede haber una tarifa de adopción asociada,
+                        que cubre los gastos de cuidado y alimentación de la mascota antes de que sea adoptada.
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading8">
                     <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="false" aria-controls="collapseTwo">
-                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                        #8 &nbsp; ¿Qué pasa si la adopción no funciona? ¿Puedo devolver al perro o gato?
                     </button>
                 </h2>
                 <div id="collapse8" class="accordion-collapse collapse" aria-labelledby="heading8" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                        Muchas de las protectoras permiten la suspensión de la adopción, pero depende de cada caso. Tratándose de particulares 
+                        es más complicado, porque dependerá de su situación actual. 
+
+                        Si la adopción no funciona, haremos todo lo posible para ayudarte a encontrar una solución adecuada para ti y la mascota. 
+                        La mayoría de protectoras permiten la suspensión de la adopción, pero si se trata de particulares las condiciones pueden variar.
+                        Igualmente, la adopción se trata de un trámite serio y vinculante, por lo que debe tomarse como tal. Si no estás seguro/a de poder 
+                        mantener o adaptarte al animal, mejor no comiences con el proceso.
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading9">
                     <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="false" aria-controls="collapseTwo">
-                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                        #9 &nbsp; ¿Puedo adoptar un perro o gato si vivo en un piso pequeño o no tengo jardín?
                     </button>
                 </h2>
                 <div id="collapse9" class="accordion-collapse collapse" aria-labelledby="heading9" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                        Sí, puedes adoptar una mascota aunque vivas en un apartamento o no tengas jardín. Sin embargo, es importante tener en cuenta
+                        las necesidades específicas de la mascota que quieres adoptar y asegurarte de que tendrás suficiente espacio y tiempo para 
+                        cuidarla adecuadamente.
                     </div>
                 </div>
             </div>
             <div class="accordion-item">
                 <h2 class="accordion-header" id="heading10">
                     <button class="accordion-button collapsed custom" type="button" data-bs-toggle="collapse" data-bs-target="#collapse10" aria-expanded="false" aria-controls="collapseTwo">
-                        #3 &nbsp; ¿Puedo retrasar la adopción de un perro o un gato para hacerlo en el futuro?
+                        #10 &nbsp; Además de adopar, ¿cómo puedo colaborar con AUM o alguna de las protectoras participantes de la aplicación?
                     </button>
                 </h2>
                 <div id="collapse10" class="accordion-collapse collapse" aria-labelledby="heading10" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        Nosotros actuamos como intermediarios entre el actual propietario del animal y el usuario interesado. Por tanto, la decisión final depende de las políticas de la protectora o los requisitos del actual dueño/a. Contacta con ellos rellenando el cuestionario presente en la ficha concreta del animal para conocer los requisitos de adopción.
+                        Si deseas colaborar con "Adopta Una Mascota" o alguna de las protectoras, existen varias formas para hacerlo:
+                        <li>Donando dinero para apoyar los gastos asociados al cuidado de las mascotas, como la alimentación o la atención médica.</li> 
+                        <li>Ofreciéndote como voluntario/a para realizar actividades como pasear perros, cuidar a los gatos, ayudar en eventos o realizar las entrevistas de actitud.</li>
+                        <li>Si tienes experiencia en áreas como el diseño gráfico o el desarrollo web, puedes ofrecer tus habilidades para mejorar la aplicación y su funcionalidad.</li>
+                        No dudes en <b><a href="../landingPage/contactUs">ponerte en contacto con nosotros</a></b> para darte más información.
                     </div>
                 </div>
             </div>
