fotos + estructura cards

--- a/src/app/Pages/blog/blog.component.html
+++ b/src/app/Pages/blog/blog.component.html
@@ -4,8 +4,8 @@
 
     <div class="jumbotron p-3 p-md-5 mb-5 text-white rounded bg-dark custom-bckg">
         <div class="col-md-6 px-0">
-            <h2 class="display-4 font-italic">Title of a longer featured blog post</h2>
-            <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what's most interesting in this post's contents.</p>
+            <h2 class="display-5 font-italic">¿Cómo escoger la mascota correcta?</h2>
+            <p class="lead my-3">xxxxx </p>
             <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">- Seguir leyendo -</a></p>
         </div>
     </div>
@@ -24,11 +24,11 @@
         </div>
         <div class="col-md-6 col-sm-12">
             <div class="card mb-3 custom-border">
-                <img class="card-img-top" src="assets/images/blog/entrada-1.png" alt="Card image cap">
+                <img class="card-img-top" src="assets/images/blog/entrada-2.png" alt="Card image cap">
                 <div class="card-body p-4">
-                    <h3 class="card-title">¡La nueva ley de mascotas ya está aquí!</h3>
-                    <h5 class="card-subtitle mb-2 text-muted">05/04/2023</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <h3 class="card-title">5 consejos para adaptar una nueva mascota a tu hogar</h3>
+                    <h5 class="card-subtitle mb-2 text-muted">18/03/2023</h5>
+                    <p class="card-text">La llegada de un animal a tu casa puede ser un proceso emocionante pero también desafiante. Lee nuestros consejos para saber cómo facilitar el proceso.</p>
                     <a href="#">- Seguir leyendo -</a>
                 </div>
             </div>
@@ -37,10 +37,10 @@
     <div class="row">
         <div class="col-md-6 col-sm-12">
             <div class="card mb-3 custom-border">
-                <img class="card-img-top" src="assets/images/blog/entrada-1.png" alt="Card image cap">
+                <img class="card-img-top" src="assets/images/blog/entrada-3.png" alt="Card image cap">
                 <div class="card-body p-4">
-                    <h3 class="card-title">¡La nueva ley de mascotas ya está aquí!</h3>
-                    <h5 class="card-subtitle mb-2 text-muted">05/04/2023</h5>
+                    <h3 class="card-title">El poder de la adopción: historias conmovedoras </h3>
+                    <h5 class="card-subtitle mb-2 text-muted">01/03/2023</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     <a href="#">- Seguir leyendo -</a>
                 </div>
@@ -48,10 +48,10 @@
         </div>
         <div class="col-md-6 col-sm-12">
             <div class="card mb-3 custom-border">
-                <img class="card-img-top" src="assets/images/blog/entrada-1.png" alt="Card image cap">
+                <img class="card-img-top" src="assets/images/blog/entrada-4.png" alt="Card image cap">
                 <div class="card-body p-4">
-                    <h3 class="card-title">¡La nueva ley de mascotas ya está aquí!</h3>
-                    <h5 class="card-subtitle mb-2 text-muted">05/04/2023</h5>
+                    <h3 class="card-title">Razones por las que adoptar a una mascota adulta</h3>
+                    <h5 class="card-subtitle mb-2 text-muted">20/02/2023</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                     <a href="#">- Seguir leyendo -</a>
                 </div>
