--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -24,8 +24,8 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="contactUs">Contacto</a>
       </li>
-       <li class="nav-item">
-        <a class="nav-link" >Blog</a>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="blog">Blog</a>
       </li>
 
       <li class="nav-item">
