--- a/src/app/Pages/blog/blog.component.css
+++ b/src/app/Pages/blog/blog.component.css
@@ -39,9 +39,46 @@ a {
     font-weight: bold;
 }
 
+a:hover {
+    color: #8FA5D5 !important;
+}
+
 .custom-bckg {
     background-image: url("src/assets/images/blog/entrada-0.png");
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+.contendor-imagen {
+    width: 10px;
+    height: 10px;
+}
+
+.custom-image {
+    object-fit: contain;
+    width:100%;
+    height:100%;
+}
+
+.custom-buttom {
+    color: white !important;
+    background-color: #F6A83F;
+    border-color: #F6A83F;
+    
+}
+
+.title-image {
+    box-shadow: 5px 5px 4px #8FA5D5;;
+}
+
+.custom-link a {
+    color: black;
+    font-weight: 400;
+    text-align: left;
+    padding: 0px 0px 0px 10px;
+    
+}
+
+.custom-link {
+    list-style: none;
+}
