--- a/src/app/Pages/blog/blog.component.html
+++ b/src/app/Pages/blog/blog.component.html
@@ -1,14 +1,87 @@
-<section class="container px-5" style="margin-top: 250px;">
+<head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+</head>
+
+<section class="container px-3" style="margin-top: 500px;">
+    <div class="row g-5">
+        <div class="col-md-12 col-lg-9">
+            <div class="title-image">
+                <img src="assets/images/blog/entrada-0.png" class="card-img-top" alt="...">
+            </div>
+            <br>
+            <br>
+            <h4><i class="bi bi-calendar-event "></i>&nbsp; 15/04/2023</h4>
+            <h2>¿Cómo escoger la mascota correcta?</h2>
+        </div>
+        <div class="col-lg-3 d-none d-lg-block">
+            <h3>Entradas 2023</h3>
+                <li class="custom-link pt-2">
+                    <a type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#entrada2">¡La nueva ley de mascotas ya está aquí!</a>
+                </li>
+                <hr>
+                <li class="custom-link">
+                    <a type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#entrada2">
+                        5 consejos para adaptar una nueva mascota a tu hogar
+                    </a>
+                </li>
+                <hr>
+                <li class="custom-link">
+                    <a type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#entrada2">
+                        El poder de la adopción: historias conmovedoras
+                    </a>
+                </li>
+                <hr>
+                <li class="custom-link">
+                    <a type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#entrada2">
+                        Razones por las que adoptar a una mascota adulta
+                    </a>
+                </li>
+            <div class="contenedor-imagen">
+                <img src="/assets/logo-png.png" class="custom-image">
+            </div>
+            <h3>Noticia relacionada</h3>
+            <div class="card" style="width: 18rem;">
+                <img src="assets/images/blog/entrada-1.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">¡La nueva ley de mascotas ya está aquí</h5>
+                    <p class="card-text">Diseñada para proteger a nuestros amigos peludos y mejorar su bienestar en el país.</p>
+                    <a href="#" class="btn btn-primary custom-buttom">Leer más</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="container px-5" >
     
     <h1 class="text-center mb-5">Blog AUM</h1>
 
+
+    <!-- INICIO ENTRADA 1 -->
+    <!-- Inicio card -->
     <div class="jumbotron p-3 p-md-5 mb-5 text-white rounded bg-dark custom-bckg">
         <div class="col-md-6 px-0">
             <h2 class="display-5 font-italic">¿Cómo escoger la mascota correcta?</h2>
-            <p class="lead my-3">xxxxx </p>
-            <p class="lead mb-0"><a href="#" class="text-white font-weight-bold">- Seguir leyendo -</a></p>
+            <p class="lead my-3">Elegir mascota es una de las decisiones más importantes de tu vida, por ello aquí tenemos unos cuantos consejos para ayudarte</p>
+            <p class="lead mb-0"><a type="button" class="btn btn-link text-white font-weight-" data-bs-toggle="modal" data-bs-target="#entrada1">- Seguir leyendo -</a></p>
         </div>
     </div>
+    <!-- Fin card -->
+    <!-- Inicio contenido -->
+    <div class="modal fade" id="entrada1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-header" style="background-color: #8FA5D5;">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body mt-5 p-0">
+                    
+                    <app-footer></app-footer>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Fin contenido-->
+    <!-- FIN ENTRADA 1 -->
 
     <div class="row">
         <div class="col-md-6 col-sm-12">
@@ -18,10 +91,63 @@
                     <h3 class="card-title">¡La nueva ley de mascotas ya está aquí!</h3>
                     <h5 class="card-subtitle mb-2 text-muted">05/04/2023</h5>
                     <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <a href="#">- Seguir leyendo -</a>
+                    <a type="button" class="btn btn-link font-weight-bold" data-bs-toggle="modal" data-bs-target="#entrada2">- Seguir leyendo -</a>
                 </div>
             </div>
         </div>
+        <!-- Inicio contenido -->
+    <div class="modal fade" id="entrada2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-fullscreen">
+            <div class="modal-content">
+                <div class="modal-header" style="background-color: #8FA5D5;">
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body mt-5 p-0">
+                    <section class="container px-3">
+                        <div class="row g-5">
+                            <div class="col-md-12 col-lg-9">
+                                <div class="title-image">
+                                    <img src="assets/images/blog/entrada-1.png" class="card-img-top" alt="...">
+                                </div>
+                                <br>
+                                <br>
+                                <h4><i class="bi bi-calendar-event "></i>&nbsp; 15/04/2023</h4>
+                                <h2>¿Cómo escoger la mascota correcta?</h2>
+                            </div>
+                            <div class="col-lg-3 d-none d-lg-block">
+                                <h3>Otras entradas de 2023</h3>
+                                <br>
+                                <ul>
+                                    <li>¡La nueva ley de mascotas ya está aquí</li>
+                                    <hr>
+                                    <li>5 consejos para adaptar una nueva mascota a tu hogar</li>
+                                    <hr>
+                                    <li>El poder de la adopción: historias conmovedoras</li>
+                                    <hr>
+                                    <li>Razones por las que adoptar a una mascota adulta</li>
+                                </ul>
+                                <div class="contenedor-imagen">
+                                    <img src="/assets/logo-png.png" class="custom-image">
+                                </div>
+                                <h3>Noticia relacionada</h3>
+                                <div class="card" style="width: 18rem;">
+                                    <img src="assets/images/blog/entrada-1.png" class="card-img-top" alt="...">
+                                    <div class="card-body">
+                                        <h5 class="card-title">¡La nueva ley de mascotas ya está aquí</h5>
+                                        <p class="card-text">Diseñada para proteger a nuestros amigos peludos y mejorar su bienestar en el país.</p>
+                                        <a href="#" class="btn btn-primary custom-buttom">Leer más</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <app-footer></app-footer>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Fin contenido-->
+
         <div class="col-md-6 col-sm-12">
             <div class="card mb-3 custom-border">
                 <img class="card-img-top" src="assets/images/blog/entrada-2.png" alt="Card image cap">
@@ -60,4 +186,6 @@
     </div>
     
 </section>
+
+
 
