--- a/src/app/Pages/blog/blog.component.html
+++ b/src/app/Pages/blog/blog.component.html
@@ -67,12 +67,12 @@
         <!-- INICIO CARD 5 -->
         <div class="col-md-6 col-sm-12">
             <div class="card mb-3 custom-border">
-                <img class="card-img-top" src="assets/images/blog/entrada-1.png" alt="Card image cap">
+                <img class="card-img-top" src="assets/images/blog/entrada-4.png" alt="Card image cap">
                 <div class="card-body p-4">
-                    <h3 class="card-title">¡La nueva ley de mascotas ya está aquí!</h3>
-                    <h5 class="card-subtitle mb-2 text-muted">05/04/2023</h5>
-                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                    <a type="button" class="btn btn-link font-weight-bold" data-bs-toggle="modal" data-bs-target="#entrada2">- Seguir leyendo -</a>
+                    <h3 class="card-title">Razones por las que adoptar una mascota adulta</h3>
+                    <h5 class="card-subtitle mb-2 text-muted">20/02/2023</h5>
+                    <p class="card-text">La mayoría de las personas optan por cachorros o crías. Pero los animales adultos son una excelente opción.</p>
+                    <a type="button" class="btn btn-link font-weight-bold" data-bs-toggle="modal" data-bs-target="#entrada5">- Seguir leyendo -</a>
                 </div>
             </div>
         </div>
@@ -504,36 +504,51 @@
                                 <h4><i class="bi bi-calendar-event "></i>&nbsp; 01/03/2023</h4>
                                 <h2>El poder de la adopción: historias conmovedoras</h2>
                                 <p class="subtitle">
-                                    La llegada de un animal a tu casa puede ser un proceso emocionante pero también desafiante. 
-                                    Lee nuestros consejos para saber cómo facilitar el proceso.
+                                    La adopción de mascotas no solo salva vidas, sino que también cambia vidas. Encontrar un amigo peludo con el
+                                    que compartir el día a día puede suponer un antes y un después en ti.
                                 </p>
                                 <!-- Fin fecha, título y subtítulo -->
                                 <!-- Inicio cuerpo noticia -->
                                 <p>
-                                    Al igual que los humanos, las mascotas también necesitan tiempo y paciencia para adaptarse a un nuevo entorno y establecer una relación 
-                                    con sus nuevos dueños. Aquí te ofrecemos algunos consejos para ayudar a que este proceso sea más suave y exitoso.
+                                    Ofrecer un hogar seguro a una mascota <strong>supone recibir todo el amor y la compañía que tienen para ofrecer</strong>. En la 
+                                    entrada de hoy, compartimos las historias de usuarios que adotaron a sus animales a través de nuestra app y cuya vida ha cambiado para siempre:
                                 </p>
                                 <br>
-                                <h3 class="section-title">#1 &nbsp; Dale tiempo a tu mascota para adaptarse</h3>
+                                <h3 class="section-title">#1 &nbsp; Roberto y Max, el perro callejero</h3>
                                 <p>
-                                    Es importante recordar que tu mascota <strong>puede estar asustada y confundida</strong> en su nuevo entorno. Permítele explorar a su propio ritmo y 
-                                    asegúrate de que tenga un <strong>lugar seguro y cómodo</strong> para dormir y descansar.
+                                    Max era un perro callejero solitario y maltratado que vivía en las calles de la ciudad. 
+                                    Después de pasar semanas vagando por las calles, fue llevado a un refugio local. Después de un chequeo médico, se descubrió que <strong>Max estaba sano y solo 
+                                        necesitaba amor y atención</strong>.
                                 </p>
-                                <h3 class="section-title">#2 &nbsp; Establece una rutina</h3>
                                 <p>
-                                    Las mascotas se sienten seguras y felices cuando tienen una rutina establecida. Establece horarios regulares <strong>para alimentar, pasear y jugar con tu 
-                                    mascota</strong>, y asegúrate de que los miembros de tu hogar estén involucrados en la rutina para que se sienta parte de la familia.
+                                    Poco después, Roberto tomo la decisión de adoptar un animal y, a través de AUM hizo que Max se convirtiera en su mejor amigo y compañero fiel.
+                                    Actualmente, Roberto <strong>recuerda la adopcioón como "la mejor decisión que he tomado en mi vida"</strong>.
                                 </p>
-                                <h3 class="section-title">#3 &nbsp; Haz que el animal se sienta cómodo</h3>
+                                
+                                <h3 class="section-title">#2 &nbsp; Alicia, Juan y Luna, la gata rescatada</h3>
                                 <p>
-                                    Dale a tu mascota un espacio seguro y acogedor en el que se sienta cómoda y protegida. Puedes proporcionarle <strong>juguetes, una cama confortable y su manta 
-                                    favorita</strong> para que se sienta en casa.
+                                    Luna fue rescatada de una casa abandonada y destartalada en la que había estado atrapada durante semanas. Con su pelaje enredado y sucio, <strong>Luna 
+                                    era una sombra de lo que fue una vez</strong>. Después de ser llevada a una casa de acogida, Luna fue tratada por un veterinario y desparasitada.
                                 </p>
+                                <p>
+                                    Finalmente, fue adoptada por Alicia y Juan, una joven pareja que se acababa de mudar a la ciudad. Con tiempo, amor y una atención absoluta
+                                    Luna recuperó su pelaje suave y sedoso, y <strong>se convirtió en un miembro más de la familia</strong>.
+                                </p>
+                                <h3 class="section-title">#3 &nbsp; Sonia y Rocky, el cachorro infeliz</h3>
+                                <p>
+                                    Rocky era un cachorro, de apenas 3 meses, que <strong>vagaba por las calles en busca de amor y compañía</strong>. Después de ser llevado al veterinario, 
+                                    Rocky rápidamente llamó la atención de una chica que buscaba un perro amistoso y leal. 
+                                </p>
+                                <p>
+                                    Tras llevarlo a casa, Sonia descubrió que Rocky no solo era amistoso, sino también muy inteligente y enérgico. Con el tiempo, el cachorro 
+                                    aprendió a sentarse, tumbarse y dar la pata, llegando a <strong>participar y ganar concursos por todo el país</strong>.
+                                </p>   
                                 <br>
                                 <p>
-                                    Adaptar una mascota a un nuevo hogar puede ser un proceso desafiante, pero con paciencia, amor y cuidado, puedes conseguir una conexión sólida. 
-                                    Si gestionas una adopción a través de <a href="https://play.google.com/store/games" target="_blank">nuestra aplicación</a> contarás con un servicio 
-                                    de atención y asistencia posterior al trámite, por lo que te sentirás acompañado durante todo el proceso.
+                                    Estas historias son solo breves ejemplos de las muchas que ilustran el poder de la adopción de mascotas. Si estás considerando adoptar 
+                                    un animal, asegúrate de hacerlo por vías adecuadas y seguras. En nuestra aplicación <a href="https://play.google.com/store/games" target="_blank">
+                                    "Adopta Una Mascota"</a> contarás con un servicio completo: desde la búsqueda de tu compañero perfecto, hasta una atención post-trámite para
+                                    ayudarte en la adaptación.
                                 </p>
                                 <!-- Fin cuerpo noticia -->
                             </div>
@@ -615,56 +630,63 @@
                             <div class="col-md-12 col-lg-9">
                                 <!-- Inicio imagen cabecera -->
                                 <div class="title-image">
-                                    <img src="assets/images/blog/entrada-1.png" class="card-img-top" alt="...">
+                                    <img src="assets/images/blog/entrada-4.png" class="card-img-top" alt="...">
                                 </div>
                                 <!-- Fin imagen cabecera -->
                                 <br>
                                 <br>
                                 <!-- Inicio fecha, título y subtítulo -->
-                                <h4><i class="bi bi-calendar-event "></i>&nbsp; 05/04/2023</h4>
-                                <h2>¡La nueva ley de mascotas ya está aquí!</h2>
+                                <h4><i class="bi bi-calendar-event "></i>&nbsp; 20/02/2023</h4>
+                                <h2>Razones por las que adoptar una mascota adulta</h2>
                                 <p class="subtitle">
-                                    Esta ley ha sido diseñada para proteger a nuestros amigos peludos y mejorar su bienestar 
-                                    en todo el país.
+                                    La mayoría de las personas optan por cachorros o crías. 
+                                    Pero los animales adultos son una excelente opción.
                                 </p>
                                 <!-- Fin fecha, título y subtítulo -->
                                 <!-- Inicio cuerpo noticia -->
                                 <p>
-                                    La ley de mascotas establece que todos los propietarios de mascotas deben <strong>inscribir
-                                    a sus animales</strong> en el registro nacional de mascotas correspondiente a su país. 
-                                    Este registro incluirá:
-                                    <br><br>
-                                    <li>Información sobre la raza.</li>
-                                    <li>Rasgos físicos descriptivos.</li>
-                                    <li>Nombre de la mascota.</li>
-                                    <li>Dueño actual y residencia.</li>
-                                    <br>
-                                    También se requerirá que los propietarios mantengan, en todo momento, a sus mascotas <strong>con 
-                                    correa y bajo control</strong> en cualquier espacio público.
+                                    ¿Por qué adoptar una mascota adulta es una excelente opción? A menudo, nos sentimos atraídos 
+                                    por la ternura y energía de las crías, sin embargo, <strong>los animales adultos son igual de amorosos 
+                                    y leales</strong>. En esta entrada te presentamos las ventajas que estos presentan frente a los cachorros. 
                                 </p>
+                                <br>
+                                <h3 class="section-title">#1 &nbsp; Ya están entrenados</h3>
                                 <p>
-                                    La ley también establece <strong>sanciones más severas para aquellos que maltraten o 
-                                    descuiden</strong> a sus mascotas. Los dueños que sean condenados por crueldad animal pueden enfrentar 
-                                    multas significativas y penas de cárcel.
+                                    Una de las mayores ventajas de adoptar una mascota adulta es que probablemente ya estén entrenados en aspectos 
+                                    básicos como <strong>usar la caja de arena o salir a hacer sus necesidades afuera</strong>. También pueden tener ciertas habilidades, 
+                                    como caminar con correa o incluso algunos trucos.
                                 </p>
+                                <h3 class="section-title">#2 &nbsp; Personalidad formada</h3>
                                 <p>
-                                    Además, también establece requisitos más estrictos para <strong>las tiendas de mascotas y los 
-                                    criadores</strong>. Las tiendas de mascotas tendrán que cumplir con <strong>estándares más 
-                                    altos</strong> de bienestar animal, y los criadores deberán <strong>registrarse y cumplir con 
-                                    ciertos requisitos</strong> de bienestar animal.
+                                    A diferencia de los cachorros, cuyas personalidades aún están en desarrollo, los animales adultos tienen 
+                                    personalidades ya formadas. Esto significa que <strong>sabes exactamente lo que estás obteniendo</strong> y puedes 
+                                    encontrar una mascota que se adapte perfectamente a tu estilo de vida y personalidad.
                                 </p>
+                                <h3 class="section-title">#3 &nbsp; Menos demanda de tiempo</h3>
                                 <p>
-                                    En resumen, la nueva ley de mascotas es una gran noticia para los dueños de mascotas y sus amigos 
-                                    peludos. Al establecer <strong>requisitos más estrictos para los propietarios y sanciones más severas para 
-                                    los maltratadores</strong> de animales, la ley ayudará a garantizar que nuestras mascotas reciban <strong>el cuidado 
-                                    que merecen</strong>. ¡Así que asegúrate de mantener a tu mascota registrada y bajo control en público, y 
-                                    trata a tu amigo peludo con el amor y el respeto que se merece!
+                                    <strong>Los cachorros requieren una atención constante, cuidado y entrenamiento</strong>, mientras que los animales adultos 
+                                    ya han superado esas etapas iniciales. Esto significa que los adoptantes de mascotas adultas tienen un 
+                                    poco más de libertad para su vida diaria.
                                 </p>
-                                    
-                                    
+                                <h3 class="section-title">#4 &nbsp; Mayor adaptabilidad</h3>
                                 <p>
-                                    Si estás buscando un nuevo compañero peludo y no sabes por donde empezar, <a href="https://play.google.com/store/games" target="_blank">
-                                    descarga nuestra aplicación</a> y encuentra a cientos de animales que necesitan un nuevo hogar donde vivir para siempre.
+                                    A menudo, los animales adultos han vivido en hogares antes, lo que significa que pueden ser más adaptables 
+                                    a un nuevo entorno. Además, si adoptas un perro o gato adulto de un refugio, <strong>probablemente habrán sido 
+                                    expuestos a diferentes entornos y situaciones</strong>, lo que les dará más herramientas para adaptarse a su nuevo hogar.
+                                </p>
+                                <h3 class="section-title">#5 &nbsp; Ayuda a los refugios</h3>
+                                <p>
+                                    Por último, al adoptar una mascota adulta, <strong>estás ayudando a aliviar la sobrepoblación de los refugios</strong>. Los 
+                                    animales adultos son los menos adoptados y muchos permanecen en los refugios durante largos períodos de 
+                                    tiempo, a veces indefinidamente. Al adoptar una mascota adulta, estás brindando a un animal <strong>una segunda 
+                                    oportunidad</strong> y ayudando a los refugios a mantener su capacidad para ayudar a otros animales necesitados.
+                                </p>
+                                <br>
+                                <p>
+                                    En resumen, adoptar una mascota adulta puede ser una excelente opción para muchas personas. No solo obtienes 
+                                    un animal entrenado y con una personalidad formada, sino que también ayudas a los refugios y das un hogar
+                                    a un animal que lo necesita. Si <a href="https://play.google.com/store/games" target="_blank">descargs nuestra 
+                                    aplicación</a> podrás filtrar los animales disponibles por su edad y ayudar a uno de estos amiguitos peludos.
                                 </p>
                                 <!-- Fin cuerpo noticia -->
                             </div>
