ajustes responsive: home + footer

--- a/src/app/Pages/home/home.component.html
+++ b/src/app/Pages/home/home.component.html
@@ -4,16 +4,34 @@
 </head>
 
 <!-- INICIO CABECERA -->
-<section class="container-fluid">
+<section class="container-fluid d-none d-md-block">
     <div class="row introduccion">
-        <div class="col-md-5" style="margin-top: 15%; text-align: right;">
+        <div class="col-md-6" style="margin-top: 150px; text-align: right;">
+            <h1>Adopta Una Mascota</h1>
+            <h2><b>La aplicación con la que <br class="d-md-none d-lg-block"> dar una segunda oportunidad</b></h2>
+            <br>
+            <a href="#cta" type="button" class="btn btn-primary boton-resalte">Descarga la app</a>
+        </div>
+        <div class="col-md-6">
+            <img class="image-home" src="/assets/images/mockup1.png">
+        </div>
+    </div>
+    <div class="row introduccion-sm d-md-none d-sm-block text-center">
+        <div class="col-md-6" style="margin-top: 5%;">
             <h1>Adopta Una Mascota</h1>
             <h2><b>La aplicación con la que dar una segunda oportunidad</b></h2>
             <br>
             <a href="#cta" type="button" class="btn btn-primary boton-resalte">Descarga la app</a>
         </div>
-        <div class="col-md-7 d-none d-md-block" style="text-align: center;">
-            <img class="image-home" src="/assets/images/mockup1.png">
+    </div>
+</section>
+<section class="container-fluid d-md-none d-sm-block">
+    <div class="row introduccion-sm text-center">
+        <div class="col-12" style="margin-top: 5%;">
+            <h1>Adopta Una Mascota</h1>
+            <h2><b>La aplicación con la que dar una segunda oportunidad</b></h2>
+            <br>
+            <a href="#cta" type="button" class="btn btn-primary boton-resalte">Descarga la app</a>
         </div>
     </div>
 </section>
