--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -9,7 +9,7 @@
       <div class="row mt-3 justify-content-between">
 
         <!-- Inicio presentación empresa -->
-        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4 px-4">
+        <div class="col-md-6 col-lg-4 mx-auto mb-4 px-4">
           <h6 class="text-uppercase fw-bold mb-4">DESARROLLO Y RSC</h6>
           <p>
             Por un desarrollo sostenible y un cuidado responsable, ¡únete al club!
@@ -27,7 +27,7 @@
         <!-- Fin presentación empresa -->
 
         <!-- Inicio links -->
-        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4 links">
+        <div class="col-md-6 col-lg-4 mx-auto mb-4 links">
           <div class="row justify-content-between">
             <h6 class="text-uppercase fw-bold mb-4">
               NUESTRA WEB
@@ -49,7 +49,7 @@
         <!-- Fin links -->
 
         <!-- Inicio logo -->
-        <div class="col-md-4 col-lg-4 col-xl-4 mx-auto mb-4 d-none d-md-block">
+        <div class="col-md-6 col-lg-4 mx-auto mb-4 d-none d-lg-block">
           <div class="contenedor-imagen">
             <img class="custom-image" src="/assets/logo-footer.png">
           </div>
